--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ _/
 *.swp
 *.swo
 *.out
+*.lo
 *.o
 *.so
 *.su
@@ -20,3 +21,26 @@ _/
 *.dvi
 *.test
 
+Makefile
+configure
+.libs/
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.log
+config.status
+*.tar.gz
+*.la
+libtool
+.deps/
+.dirstamp
+build-aux/
+src/libsha2-config.h
+src/libsha2-config.h.in
+m4/libtool.m4
+m4/ltoptions.m4
+m4/ltsugar.m4
+m4/ltversion.m4
+m4/lt~obsolete.m4
+src/stamp-h1
+libsha2.pc
