Fix libsha2_digest + minor improvements
Signed-off-by: Mattias Andrée <maandree@kth.se>

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,4 @@
-_/
-\#*\#
-.*
-!.git*
+*\#*
 *~
 *.bak
 *.swp
@@ -11,10 +8,5 @@ _/
 *.so
 *.su
 *.a
-*.gch
-*.info
-*.pdf
-*.ps
-*.dvi
-*.test
 *.lo
+/test
